src/components/NewPost/NewPost.scss
$base-font-size: 13px;
$mid-screen: 800px;

.NewPost-container {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 650px 1fr;
  grid-template-rows: 50px 70px 65px 80px 1fr 50px 50px;
  grid-template-areas:
    ".      .             ."
    ".      navigation    ."
    ".      feeling       ."
    ".      title         ."
    "back   text-editor   date"
    ".      below-editor  ."
    ".      saveError     .";

    @media (max-width: $mid-screen) {
      grid-template-columns: 1fr 5fr 1fr;
    }

    @media (max-width: 500px) {
      grid-template-columns: 1fr 7fr 1fr;
    }

    @media (max-width: 425px) {
      grid-template-columns: 1fr 8fr 1fr;
    }

    @media (max-width: 400px) {
      grid-template-columns: 1fr 12fr 1fr;
    }

  .Navigation {
    grid-area: navigation;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-template-areas: "home      logo       newpost";

    h2 {
      grid-area: logo;
      justify-self: center;
      align-self: center;
      font-size: 30px;
      font-weight: bold;
      color: black;
    }

    .home {
      grid-area: home;
      justify-self: end;
      align-self: center;
      text-decoration: none;
      color: black;
      margin-right: 3px;

      &:hover {
        color: white;
      }

      @media (max-width: 700px) {
        justify-self: center;
      }
    }

    .newpost {
      grid-area: newpost;
      justify-self: start;
      align-self: center;
      text-decoration: none;
      color: black;

      &:hover {
        color: white;
      }

      @media (max-width: 700px) {
        justify-self: center;
      }
    }
  }

  .Loading {
    grid-area: title;
    justify-self: center;
    align-self: center;
  }

  .Error {
    grid-area: title;
    font-family: "Poppins", sans-serif;
    display: flex;
    justify-content: center;
    padding: 15px 0;

    p {
      width: auto;
    }
  }

  .post-title {
    grid-area: title;
    justify-self: start;
    align-self: center;
    width: 100%;

    display: flex;
    align-items: center;

    input {
      width: 100%;
      font-family: "Poppins", sans-serif;
      background: white;
      border: none;
      padding: 10px;
      border-radius: 5px;
      font-size: $base-font-size;

      &:focus {
        outline: none;
      }

      textarea:focus {
        outline: none;
      }
    }
  }

  .Editor {
    grid-area: text-editor;
    justify-self: center;
    align-self: center;
    width: 100%;
    background: none;
    box-shadow: 0 0 15px #b0a8a6;
    border-radius: 10px;

    //font-size del texto dentro del editor
    p {
      font-size: 14px;
      margin-top: 1em;
      margin-bottom: 1em;
      margin-left: 0;
      margin-right: 0;
    }

    ol,
    ul,
    li {
      font-size: 14px;
      line-height: 1.4;
    }

    h2 {
      display: block;
      font-size: 1.5em;
      margin-top: 0.83em;
      margin-bottom: 0.83em;
      margin-left: 0;
      margin-right: 0;
      font-weight: bold;
    }

    h3 {
      display: block;
      font-size: 1.17em;
      margin-top: 1em;
      margin-bottom: 1em;
      margin-left: 0;
      margin-right: 0;
      font-weight: bold;
    }

    h4 {
      display: block;
      font-size: 1em;
      margin-top: 1.33em;
      margin-bottom: 1.33em;
      margin-left: 0;
      margin-right: 0;
      font-weight: bold;
    }
  }

  .Date {
    grid-area: date;
    align-self: end;
    justify-self: start;
    margin-left: 10px;
    margin-bottom: 5px;
    font-size: $base-font-size - 1px;
    color: white;
    writing-mode: vertical-rl;

    @media (max-width: 400px) {
      display: none;
    }
  }

  .Below-Editor {
    grid-area: below-editor;
    justify-self: center;
    align-self: center;
    margin-top: 10px;
    width: 100%;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    grid-template-areas: "feeling      save";

    .Feeling {
      grid-area: feeling;
      display: flex;
      justify-self: flex-start;
      align-self: center;
      align-items: center;
      z-index: 0;

      p {
        margin-left: 5px;
        margin-right: 10px;
        font-size: $base-font-size;

        @media (max-width: $mid-screen) {
          display: none;
        }
      }

      .emoji-false {
        margin-right: 5px;
        padding: 5px;
        border-radius: 5px;
        background: white;
        cursor: pointer;
        opacity: 0.5;

        &:hover {
          opacity: 0.7;
        }

        @media (max-width: $mid-screen) {
          opacity: 0.6;
        }

        &:hover {
          opacity: 0.6;
        }
      }

      .emoji-true {
        margin-right: 5px;
        padding: 5px;
        border-radius: 5px;
        background: white;
        cursor: pointer;
      }
    }

    .Save {
      grid-area: save;
      justify-self: flex-end;
      align-self: center;

      button {
        background: white;
        border: none;
        padding: 5px;
        width: 75px;
        border-radius: 5px;
        color: #cccccc;
        font-size: $base-font-size;

        &:hover {
          color: black;
          cursor: pointer;
        }

        &:focus {
          outline: 0;
        }
      }
    }
  } //below-editor

  .saveError {
    grid-area: saveError;
    justify-self: flex-end;
    align-self: center;

    .Error {
      color: red;
      font-size: 12px;
    }
  }
}

.Editor {
  button {
    font-family: "Poppins", sans-serif;
  }

  --ck-font-face: "Poppins", sans-serif;

  /* Overrides the border radius setting in the theme. */
  --ck-border-radius: 5px;

  /* Overrides the default font size in the theme. */
  --ck-font-size-base: 13px;

  /* Helper variables to avoid duplication in the colors. */
  --ck-custom-background: #544343;
  --ck-custom-foreground: #3a2e2e /*color botón oprimido*/;
  --ck-custom-border: #725a5a;
  --ck-custom-white: hsl(0, 0%, 100%);

  /* -- Overrides generic colors. ------------------------------------------------------------- */

  --ck-color-base-border: var(--ck-custom-white);
  --ck-color-base-foreground: var(--ck-custom-background);
  --ck-color-focus-border: none;
  --ck-color-text: hsl(0, 0%, 98%);
  --ck-color-shadow-drop: hsla(0, 0%, 0%, 0.2);
  --ck-color-shadow-inner: hsla(0, 0%, 0%, 0.1);

  /* -- Overrides the default .ck-button class colors. ---------------------------------------- */

  --ck-color-button-default-background: var(--ck-custom-background);
  --ck-color-button-default-hover-background: #473838 /*15*/;
  --ck-color-button-default-active-background: #3e3232 /*25*/;
  --ck-color-button-default-active-shadow: #473838 /*15*/;
  --ck-color-button-default-disabled-background: var(--ck-custom-background);

  --ck-color-button-on-background: var(--ck-custom-foreground);
  --ck-color-button-on-hover-background: #322828 /*40*/;
  --ck-color-button-on-active-background: #382d2d;
  --ck-color-button-on-active-shadow: #322828 /*40*/;
  --ck-color-button-on-disabled-background: var(--ck-custom-foreground);

  --ck-color-button-action-background: hsl(168, 76%, 42%);
  --ck-color-button-action-hover-background: hsl(168, 76%, 38%);
  --ck-color-button-action-active-background: hsl(168, 76%, 36%);
  --ck-color-button-action-active-shadow: hsl(168, 75%, 34%);
  --ck-color-button-action-disabled-background: hsl(168, 76%, 42%);
  --ck-color-button-action-text: var(--ck-custom-white);

  --ck-color-button-save: hsl(120, 100%, 46%);
  --ck-color-button-cancel: hsl(15, 100%, 56%);

  /* -- Overrides the default .ck-dropdown class colors. -------------------------------------- */

  --ck-color-dropdown-panel-background: var(--ck-custom-background);
  --ck-color-dropdown-panel-border: var(--ck-custom-foreground);

  /* -- Overrides the default .ck-input class colors. ----------------------------------------- */

  --ck-color-input-background: var(--ck-custom-foreground);
  --ck-color-input-border: var(--ck-custom-white);
  --ck-color-input-text: hsl(0, 0%, 98%);
  --ck-color-input-disabled-background: hsl(255, 4%, 21%);
  --ck-color-input-disabled-border: var(--ck-custom-white);
  --ck-color-input-disabled-text: hsl(0, 0%, 46%);

  /* -- Overrides the default .ck-list class colors. ------------------------------------------ */

  --ck-color-list-background: var(--ck-custom-background);
  --ck-color-list-button-hover-background: #3a2e2e;
  --ck-color-list-button-on-background: var(--ck-color-base-active);
  --ck-color-list-button-on-background-focus: var(--ck-color-base-active-focus);
  --ck-color-list-button-on-text: var(--ck-color-base-background);

  /* -- Overrides the default .ck-balloon-panel class colors. --------------------------------- */

  --ck-color-panel-background: var(--ck-custom-background);
  --ck-color-panel-border: var(--ck-custom-white);

  /* -- Overrides the default .ck-toolbar class colors. --------------------------------------- */

  --ck-color-toolbar-background: var(--ck-custom-background);
  --ck-color-toolbar-border: none;

  /* -- Overrides the default .ck-tooltip class colors. --------------------------------------- */

  --ck-color-tooltip-background: hsl(252, 7%, 14%);
  --ck-color-tooltip-text: hsl(0, 0%, 93%);

  /* -- Overrides the default colors used by the ckeditor5-image package. --------------------- */

  --ck-color-image-caption-background: hsl(0, 0%, 97%);
  --ck-color-image-caption-text: hsl(0, 0%, 20%);

  /* -- Overrides the default colors used by the ckeditor5-widget package. -------------------- */

  --ck-color-widget-blurred-border: hsl(0, 0%, 87%);
  --ck-color-widget-hover-border: hsl(43, 100%, 68%);
  --ck-color-widget-editable-focus-background: var(--ck-custom-white);

  /* -- Overrides the default colors used by the ckeditor5-link package. ---------------------- */

  --ck-color-link-default: hsl(190, 100%, 75%);
}

